--- a/index.html
+++ b/index.html
@@ -211,11 +211,11 @@
 
         const phrases = [
             "Will you be my Valentine?",
-            "REALLY !?  AGAIN will you be my Valentine?",
-            "Okay !! You are kidding me. One more time !",
-            "Please, Be my valentine.",
-            "Don't do this to me... Be my Valentine.",
-            "Final chance... !!! Will you be my Valentine?"
+            "REALLY !?..<br>AGAIN will you be my Valentine?",
+            "Okay !! <br> You are kidding me. <br> One more time !",
+            "Please... <br> Be my valentine.",
+            "Don't do this to me... <br> Be my Valentine.",
+            "Final chance... !!! <br> Will you be my Valentine?"
         ];
 
         const moveButton = (e) => {
