--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
         ];
         const phrasesNO = [
             "Maybe my Valentine?",
-            "Are you heartless?",
+            "Really!!<br>Are you heartless?",
             "Seriously last chance,<br>be my valentine.",
         ];
         const phrases = [
@@ -383,10 +383,10 @@
             
             if (didClickNo) {
                 messageElement.innerHTML = 
-                    "Finally! I knew you'd give in eventually! ❤️<br>" +
+                    "Finally! I knew you'd give in eventually!<br>" +
                     "Your contract with my DAD has been<br>" +
                     "extended to August end.<br>" +
-                    "Happy Valentine's Day!";
+                    "Happy Valentine's Day! ❤️";
             } else {
                 messageElement.innerHTML = 
                     "The contract has been signed!<br>" +
